Added unit test and fix coverage